updated in all page

--- a/index.html
+++ b/index.html
@@ -56,23 +56,27 @@
 	  </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap ftco-degree-bg" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap ftco-degree-bg" style="background-image: url('images/picture.jpg')" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
           <div class="col-lg-8 ftco-animate">
-          	<div class="text w-100 text-center mb-md-5 pb-md-5">
+          	<!-- <div class="text w-100 text-center mb-md-5 pb-md-5">
 	            <h1 class="mb-4">Fast &amp; Easy Way To Rent A Car</h1>
 	            <p style="font-size: 18px;">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts</p>
 	            <a href="https://vimeo.com/45830194" class="icon-wrap popup-vimeo d-flex align-items-center mt-4 justify-content-center">
-	            	<div class="icon d-flex align-items-center justify-content-center">
+	            	 <div class="icon d-flex align-items-center justify-content-center">
 	            		<span class="ion-ios-play"></span>
 	            	</div>
 	            	<div class="heading-title ml-5">
 		            	<span>Easy steps for renting a car</span>
 	            	</div>
 	            </a>
-            </div>
+            </div> -->
+            <div class="text w-100 text-center mb-md-5 pb-md-5">
+              <h1 id="hero-heading" class="mb-4">Fast & Easy Way To Rent A Car</h1>
+              <p style="font-size: 18px;">Discover the freedom of the open road—where every turn leads to adventure, every mile creates memories, and every ride feels effortless. 🚗✨</p>
+          </div>
           </div>
         </div>
       </div>
@@ -164,13 +168,13 @@
     				<div class="carousel-car owl-carousel">
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-1.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img1.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Grand Sedan</a></h2>
+		    						<h2 class="mb-0"><a href="#">Totota</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<span class="cat">Cheverolet</span>
-			    						<p class="price ml-auto">$500 <span>/day</span></p>
+			    						<p class="price ml-auto">₹500 <span>/day</span></p>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -178,13 +182,13 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-2.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img2.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Grand Sedan</a></h2>
+		    						<h2 class="mb-0"><a href="#">Fortuner</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<span class="cat">Cheverolet</span>
-			    						<p class="price ml-auto">$500 <span>/day</span></p>
+			    						<p class="price ml-auto">₹500 <span>/day</span></p>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -192,13 +196,13 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-3.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img3.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Grand Sedan</a></h2>
+		    						<h2 class="mb-0"><a href="#">Sedan</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<span class="cat">Cheverolet</span>
-			    						<p class="price ml-auto">$500 <span>/day</span></p>
+			    						<p class="price ml-auto">₹500 <span>/day</span></p>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -206,13 +210,13 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-4.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img4.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Grand Sedan</a></h2>
+		    						<h2 class="mb-0"><a href="#">BMW</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<span class="cat">Cheverolet</span>
-			    						<p class="price ml-auto">$500 <span>/day</span></p>
+			    						<p class="price ml-auto">₹500 <span>/day</span></p>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -223,7 +227,7 @@
     		</div>
     	</div>
     </section>
-
+<!-- 
     <section class="ftco-section ftco-about">
 			<div class="container">
 				<div class="row no-gutters">
@@ -241,14 +245,14 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<section class="ftco-section">
 			<div class="container">
 				<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
           	<span class="subheading">Services</span>
-            <h2 class="mb-3">Our Latest Services</h2>
+            <h2 class="mb-3">Our Services</h2>
           </div>
         </div>
 				<div class="row">
@@ -257,7 +261,7 @@
             	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-wedding-car"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Wedding Ceremony</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>"Make your wedding day unforgettable with our luxury car service—arrive in elegance, style, and absolute comfort on your special day!" 🚗💍</p>
               </div>
             </div>
 					</div>
@@ -266,7 +270,8 @@
             	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">City Transfer</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>
+                  "Seamless city transfers with comfort and reliability—ride with ease, arrive on time, and travel stress-free to your destination!" 🚖</p>
               </div>
             </div>
 					</div>
@@ -275,7 +280,7 @@
             	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-car"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Airport Transfer</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>"Reliable airport transfer for a smooth journey—on time, hassle-free, and comfortable ride to or from the airport!" ✈️🚗</p>
               </div>
             </div>
 					</div>
@@ -284,7 +289,7 @@
             	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Whole City Tour</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>"Explore the heart of the city with our guided tours—comfort, convenience, and unforgettable sights all in one ride!" 🚗🏙️</p>
               </div>
             </div>
 					</div>
@@ -292,7 +297,7 @@
 			</div>
 		</section>
 
-		<section class="ftco-section ftco-intro" style="background-image: url(images/bg_3.jpg);">
+		<!-- <section class="ftco-section ftco-intro" style="background-image: url(images/bg_3.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row justify-content-end">
@@ -302,7 +307,7 @@
           </div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 
     <section class="ftco-section testimony-section bg-light">
@@ -318,7 +323,7 @@
             <div class="carousel-testimony owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -329,7 +334,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_2.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -340,7 +345,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_3.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -351,7 +356,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -362,7 +367,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/customer-profile.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -376,7 +381,7 @@
         </div>
       </div>
     </section>
-
+<!-- 
     <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center mb-5">
@@ -433,8 +438,8 @@
           </div>
         </div>
       </div>
-    </section>	
-
+    </section>	 -->
+<!-- 
     <section class="ftco-counter ftco-section img bg-light" id="section-counter">
 			<div class="overlay"></div>
     	<div class="container">
@@ -473,15 +478,15 @@
           </div>
         </div>
     	</div>
-    </section>	
+    </section>	 -->
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">Car<span>book</span></a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2"><a href="#" class="logo"><img src="vedant_logo_background.png" alt="" height="50px" width="150px"></a></h2>
+              <p>Discover the freedom of the open road—where every turn leads to adventure, every mile creates memories, and every ride feels effortless. 🚗✨</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -496,8 +501,7 @@
                 <li><a href="#" class="py-2 d-block">About</a></li>
                 <li><a href="#" class="py-2 d-block">Services</a></li>
                 <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
-                <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
-                <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
+                <!-- <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li> -->
               </ul>
             </div>
           </div>
@@ -506,8 +510,6 @@
               <h2 class="ftco-heading-2">Customer Support</h2>
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">FAQ</a></li>
-                <li><a href="#" class="py-2 d-block">Payment Option</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
                 <li><a href="#" class="py-2 d-block">How it works</a></li>
                 <li><a href="#" class="py-2 d-block">Contact Us</a></li>
               </ul>
@@ -518,9 +520,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Sector No 14, Goverdhan Villas, Udaipur-Rajasthan - 313001 (Near Rajasthan Hospital), India</span></li>
+	                <li><a hhref="tel:7947118833"><span class="icon icon-phone"></span><span class="text">+91 7947118833</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">help@vedanttours.com</span></a></li>                
 	              </ul>
 	            </div>
             </div>
@@ -530,7 +532,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://iframeit.in" target="_blank"><b>iframeit</b></a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
@@ -542,6 +544,26 @@
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
+  <script>
+    // Array of headlines
+    const headlines = [
+        "Fast & Easy Way To Rent A Car",
+        "Drive Your Dream, Rent with Ease!",
+        "Your Journey, Our Wheels – Rent & Ride Today!",
+        "Luxury, Comfort & Freedom – Your Car Rental Solution!",
+        "Hassle-Free Car Rentals for Every Journey!"
+    ];
+
+    let index = 0; // Initial index
+    const headingElement = document.getElementById("hero-heading");
+
+    function changeHeading() {
+        index = (index + 1) % headlines.length; // Loop through the array
+        headingElement.innerHTML = headlines[index]; // Change text
+    }
+
+    setInterval(changeHeading, 3000); // Change heading every 3 seconds
+</script>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
